--- a/ConsoleHelper.Library/PrettyConsole.Library.csproj
+++ b/ConsoleHelper.Library/PrettyConsole.Library.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{62941E99-1628-45FF-9F9D-2D971C0E7E38}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{B110D180-40FE-48B9-A88B-E23F312B7C46}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Bmp2Bitmap</RootNamespace>
-    <AssemblyName>bmp2bitmap</AssemblyName>
+    <RootNamespace>PrettyConsole.Library</RootNamespace>
+    <AssemblyName>PrettyConsole.Library</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -35,7 +35,6 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -46,15 +45,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Converter.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Argument.cs" />
+    <Compile Include="ArgumentOption.cs" />
+    <Compile Include="ConsoleHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\ConsoleHelper.Library\PrettyConsole.Library.csproj">
-      <Project>{B110D180-40FE-48B9-A88B-E23F312B7C46}</Project>
-      <Name>PrettyConsole.Library</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
