--- a/font2font/font2font.csproj
+++ b/font2font/font2font.csproj
@@ -54,6 +54,10 @@
       <Project>{895AF2E6-0671-4405-9CAD-E7D32A9EA8A2}</Project>
       <Name>Bmp2Font.Library</Name>
     </ProjectReference>
+    <ProjectReference Include="..\ConsoleHelper.Library\PrettyConsole.Library.csproj">
+      <Project>{B110D180-40FE-48B9-A88B-E23F312B7C46}</Project>
+      <Name>PrettyConsole.Library</Name>
+    </ProjectReference>
     <ProjectReference Include="..\font2bmp.Library\Font2Bmp.Library.csproj">
       <Project>{1F6C64BD-58C3-4BBE-ADF1-FABCC9DA036A}</Project>
       <Name>Font2Bmp.Library</Name>
